[package]
name = "diesel-point"
version = "0.1.1"
edition = "2021"
authors = ["fernandomarca"]
readme = "README.md"
license = "MIT OR Apache-2.0"

repository = "https://github.com/fernandomarca/diesel-point"
documentation = "https://docs.rs/diesel-point"
description = "Diesel support for Point types in Postgres"
keywords = ["sql", "orm", "diesel", "postgres", "point"]
categories = ["database"]

[dependencies]
diesel = { version = "2.1.4", features = ["postgres"] }
serde = { version = "1.0.196", features = ["derive"], optional = true }
byteorder = "1.5.0"
